force-app/main/default/objects/Leave_Plan__c/Leave_Plan__c.object-meta.xml
<CustomObject>
    <description>This custom object is used to capture Leave Plan for various ES Users that will be checked against showing their availability for online consultations.</description>
    <label>Leave Plan</label>
    <nameField>
        <label>Leave Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leave Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>