force-app/main/default/objects/Leave_Plan__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>08 AM</fullName>
            </value>
            <value>
                <fullName>09 AM</fullName>
            </value>
            <value>
                <fullName>10 AM</fullName>
            </value>
            <value>
                <fullName>11 AM</fullName>
            </value>
            <value>
                <fullName>12 PM</fullName>
            </value>
            <value>
                <fullName>01 PM</fullName>
            </value>
            <value>
                <fullName>02 PM</fullName>
            </value>
            <value>
                <fullName>03 PM</fullName>
            </value>
            <value>
                <fullName>04 PM</fullName>
            </value>
            <value>
                <fullName>05 PM</fullName>
            </value>
            <value>
                <fullName>06 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>