force-app/main/default/objects/Leave_Plan__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <formula>IF(!ISBLANK(TEXT(End_Time__c)), IF(CONTAINS(TEXT(End_Time__c),&#39;PM&#39;) &amp;&amp; TEXT(End_Time__c) != &#39;12 PM&#39;, Value(LEFT(TEXT(End_Time__c),2))+12, Value(LEFT(TEXT(End_Time__c),2))), 18)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>