force-app/main/default/objects/Leave_Plan__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <formula>IF(!ISBLANK(TEXT(Start_Time__c)), IF(CONTAINS(TEXT(Start_Time__c),&#39;PM&#39;) &amp;&amp; TEXT(Start_Time__c) != &#39;12 PM&#39;, Value(LEFT(TEXT(Start_Time__c),2))+12, Value(LEFT(TEXT(Start_Time__c),2))), 9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StartTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>